--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-storybook": "^0.6.13",
     "prop-types": "^15.8.1",
     "storybook": "^7.1.1",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "webpack": "^5.88.2"
   }
 }
