Feat: Create a BannerItem and stories

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "baseUrl": "./src",
     "paths": {
       "@hooks/*": ["./hooks/*"],
+      "@assets/*": ["./assets/*"],
       "@components/*": ["./components/*"],
+      "@pages/*": ["./pages/*"],
       "@/*": ["./*"]
     }
   },
