Fix: BaseLayout height and key error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@hooks/*": ["./hooks/*"],
       "@assets/*": ["./assets/*"],
       "@components/*": ["./components/*"],
+      "@data/*": ["./data/*"],
       "@pages/*": ["./pages/*"],
       "@/*": ["./*"]
     }
